# llm_rs

./: Cargo.toml  README.md  build.rs  lib.rs  logger.rs
src/: main.rs  utils.rs
src/cuda/: mod.rs  wrapper.cu
src/data/: dataloader.rs  mod.rs  tokenizer.rs
src/layers/: attention.rs  encoder.rs  gelu.rs  layernorm.rs  matmul.rs  mod.rs  residual.rs  softmax.rs
src/model/: gpt2_cuda.rs  mod.rs
src/optimizers/: adamw.rs  mod.rs
